# diesel-multiconnection-manager

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  cog.toml  docker-compose.yaml  flake.nix  init.sql  init_my.sql  init_pg.sql  test1.db
example/: Cargo.toml
example/migrations/2023-10-02-095516_create/: up.sql
example/src/: main.rs  schema.rs
multi_connection_manager/: CHANGELOG.md  Cargo.toml
multi_connection_manager/src/: lib.rs
multi_tenancy/: Cargo.toml
multi_tenancy/src/: lib.rs
pgschema/: Cargo.toml
pgschema/src/: lib.rs
