[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { workspace = true, features = ["chrono", "uuid"] }
dotenv = { workspace = true }
tenancy = { path = "../multi_tenancy", package = "multi-tenancy" }
# To help with generating uuids
uuid = {version = "1.3.4", features = ["v4", "serde"]}
chrono = { version = "0.4", features = ["serde"] }
rand = { workspace = true }
anyhow = {workspace = true }